Fix Name alignment

--- a/public/huds/NACCS/style.css
+++ b/public/huds/NACCS/style.css
@@ -530,8 +530,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   vertical-align: text-bottom;
-  line-height: 56px;
-  font-size: 22px;
+  line-height: 42px;
+  font-size: 28px;
   font-weight: bold;
   text-overflow: ellipsis;
   overflow: visible;
@@ -547,7 +547,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   vertical-align: text-bottom;
-  line-height: 28px;
+  line-height: 18px;
   font-size: 12px;
   font-weight: normal;
   text-overflow: ellipsis;
